Run the demo on -Dvfd=posix with embedded vproxy frameworks; add offline ipa signing
build-java.sh now builds both vproxy native frameworks per SDK with
'make ios-vfdposix' in the vproxy root and stores them under
third_party/vproxy-frameworks/<sdk>/; stage-frameworks.sh stages the
matching slice into third_party/Frameworks (spelled differently: the
default APFS volume is case-insensitive), which project.yml embeds into
<bundle>/Frameworks. JvmModel launches the JVM with -Dvfd=posix and
java.library.path pointing at the two framework directories, with an
upfront bundle check; the app's @executable_path/Frameworks rpath
resolves libvfdposix's dependency on libpni. Device flows
(run-device-demo.py, package-ipa.py) re-stage the iphoneos slice and
package-ipa.py refreshes libtinyjvm.a from dist before its build.

Add support/sign-ipa.py: sign the unsigned ipa fully offline with the
local development identity (profile picked by bundle id, certificate by
team OU and signed by hash to avoid same-name ambiguity, entitlements
derived from the profile, nested frameworks/markers signed before the
main bundle). README documents how to look up paired devices, team ids,
certificates and profiles, and the 7-day personal-team profile expiry
with phone-free renewal; all examples use redacted identifiers.

Verified end to end on the iOS simulator and on a real device.